--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -569,3 +569,11 @@ border-radius: .1em;
 .ai-inverse {
   color: #fff;
 }
+.news-badge {
+  background-color: #d9534f;
+  color: white;
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-weight: bold;
+  margin-right: 8px;
+}
