--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,8 @@
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
+<script src="{{ '/assets/js/custom.js' | relative_url }}"></script>
+
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
