--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,4 +20,8 @@
 
 <meta http-equiv="cleartype" content="on">
 
+<a class="site-title" rel="author" href="{{ '/' | relative_url }}">
+  Xiaoyan's Homepage
+</a>
+
 <script src="{{ '/assets/js/custom.js' | relative_url }}"></script>
